fixed arrow buttons on mobile

--- a/less/style.less
+++ b/less/style.less
@@ -22,10 +22,10 @@ body {
   justify-content: center;
   align-items: start;
   background: @background-color;
-  width: 60%;
+  width: 70%;
   margin: 50px auto;
   box-shadow: 0 3px 10px 1px rgba(0,0,0,0.2);
-  padding: 20px;
+  padding: 20px auto 50px auto;
   position: relative;
   transition: width .5s;
 }
@@ -34,8 +34,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   color: @gray;
-  margin: 0 20px 20px;
+  margin: 20px 44px 100px;
   min-width: 400px;
   width: 60%;
 }
@@ -111,7 +112,7 @@ button {
   padding: 15px;
   background: #d2edf2;
   color: @gray;
-  margin: 3px;
+  margin: 5px;
   box-shadow: 0 2px 6px 0 rgba(0,0,0,0.16);
   border: none;
   line-height: 1px;
@@ -130,21 +131,23 @@ button {
   }
 }
 
-.btm-btn {
-  width: 100%;
-  text-align: center;
+.buttons {
+  width: 40%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 .left-button {
   position: absolute;
-  top: 200px;
-  left: 15px;
+  bottom: 10px;
+  left: 30%;
 }
 
 .right-button {
   position: absolute;
-  top: 200px;
-  right: 15px;
+  bottom: 10px;
+  right: 30%;
 }
 
 #right-arrow {
@@ -241,25 +244,32 @@ button {
   }
 
   #keyValues {
-    margin-bottom: 100px;
+    margin-bottom: 50px;
   }
 
-  .arrow(){
-    position: absolute;
-    top: auto;
-    bottom: 25px;
-    height: 60px;
+  .buttons {
+    width: 70%;
+    margin-bottom: 15px;
   }
+  // .arrows {
+  //   width: 100%;
+  // }
 
-  #previous {
-    left: 25%;
-    .arrow
-  }
-
-  #next {
-    right: 25%;
-    .arrow
-  }
+  // .arrow(){
+  //   position: relative;
+  //   // bottom: 25px;
+  //   // height: 60px;
+  // }
+  //
+  // #previous {
+  //   right: 25%;
+  //   .arrow
+  // }
+  //
+  // #next {
+  //   left: 25%;
+  //   .arrow
+  // }
 }
 // LARGE SCREEN WIDTH
 @media (max-width: 1024px) {
